--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -19,12 +19,11 @@ button:hover {
   border-color: #FF8303;
 }
 
-p {
+p,
+h3 {
   color: #F0E3CA;
-}
-
-.main-section {
-  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .base-form {
@@ -34,7 +33,7 @@ p {
   padding-left: 23px;
   padding-top: 23px;
   padding-right: 22px;
-  height: 80px;
+  height: 110px;
 }
 .base-form .input-section {
   display: flex;
@@ -43,7 +42,7 @@ p {
   width: 90%;
 }
 .base-form .input-element {
-  height: 32px;
+  height: 48px;
   background-color: #1F1E1B;
   border: 1px solid #A35709;
   border-radius: 8px;
@@ -89,4 +88,75 @@ p {
 .no-tasks p {
   font-weight: 400;
   font-size: 24px;
+}
+
+ul {
+  margin-top: 32px;
+  padding: 0px 22px;
+  gap: 10px;
+}
+ul .task-item {
+  height: 72px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 8px;
+  border: 3px solid #A35709;
+  padding: 10 0 10 16px;
+  position: relative;
+  margin-bottom: 10px;
+}
+ul .task-item h3 {
+  margin: 0;
+  font-size: 22px;
+  font-weight: 500;
+  width: 80%;
+}
+ul .task-item p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  width: 80%;
+}
+ul .task-item .close-button {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin-right: 12px;
+  transform: translateY(-50%);
+  height: 50%;
+  width: 5%;
+  cursor: pointer;
+  background-image: url("../images/delete-button.svg");
+  background-size: 50%;
+  background-repeat: no-repeat;
+}
+
+.delete-section {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.delete-section .modal-content {
+  margin: 15% auto;
+  padding: 30px 20px;
+  width: 30%;
+  height: 148px;
+  text-align: center;
+  border-top: 6px solid #A35709;
+}
+.delete-section .modal-content p {
+  font-weight: 400;
+  font-size: 18px;
+}
+.delete-section .modal-content button {
+  height: 24px;
+  width: 30%;
+  height: 20%;
 }/*# sourceMappingURL=general.css.map */
