--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -27,15 +27,14 @@ button:hover {
     border-color: $border-hover;
 }
 
-p {
+p,
+h3 {
     color: $text-color;
+    justify-content: center;
+    align-items: center;
 }
 
 
-
-.main-section {
-    width: 100%;
-}
 
 .base-form {
     display: flex;
@@ -44,7 +43,7 @@ p {
     padding-left: 23px;
     padding-top: 23px;
     padding-right: 22px;
-    height: 80px;
+    height: 110px;
 
     & .input-section {
         display: flex;
@@ -54,7 +53,7 @@ p {
     }
 
     & .input-element {
-        height: 32px;
+        height: 48px;
         background-color: $blocks-hover-color;
         border: 1px solid $border-color;
         border-radius: 8px;
@@ -105,5 +104,85 @@ p {
     p {
         font-weight: 400;
         font-size: 24px;
+    }
+}
+
+
+ul {
+    margin-top: 32px;
+    padding: 0px 22px;
+    gap: 10px;
+
+    & .task-item {
+        height: 72px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        border-radius: 8px;
+        border: 3px solid $border-color;
+        padding: 10 0 10 16px;
+        position: relative;
+        margin-bottom: 10px;
+
+        h3 {
+            margin: 0;
+            font-size: 22px;
+            font-weight: 500;
+            width: 80%;
+        }
+
+        p {
+            margin: 0;
+            font-size: 14px;
+            font-weight: 400;
+            width: 80%;
+        }
+
+        .close-button {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            margin-right: 12px;
+            transform: translateY(-50%);
+            height: 50%;
+            width: 5%;
+            cursor: pointer;
+            background-image: url("../images/delete-button.svg");
+            background-size: 50%;
+            background-repeat: no-repeat;
+        }
+    }
+}
+
+
+.delete-section {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    & .modal-content {
+        margin: 15% auto;
+        padding: 30px 20px;
+        width: 30%;
+        height: 148px;
+        text-align: center;
+        border-top: 6px solid $border-color;
+
+        p {
+            font-weight: 400;
+            font-size: 18px;
+        }
+
+        button {
+            height: 24px;
+            width: 30%;
+            height: 20%;
+        }
     }
 }
