--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -11,7 +11,7 @@ $text-color: #F0E3CA;
 
 
 * {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     background-color: $background-color;
 }
 
@@ -35,21 +35,23 @@ h3 {
 }
 
 
+.main-section {
+    padding: 20px 40px;
+}
 
 .base-form {
+    width: 95%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-left: 23px;
-    padding-top: 23px;
-    padding-right: 22px;
+    padding: 23px 22px;
     height: 110px;
 
     & .input-section {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 90%;
+        width: 80%;
     }
 
     & .input-element {
@@ -63,9 +65,14 @@ h3 {
     }
 
     & .add-button {
-        width: 10%;
-        padding: 23px;
+        width: 20%;
         margin-left: 10px;
+
+        & .add {
+            margin: 23px;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
 }
@@ -108,55 +115,72 @@ h3 {
 }
 
 
-ul {
+.tasks-list {
     margin-top: 32px;
-    padding: 0px 22px;
+    padding: 0 22px;
     gap: 10px;
 
     & .task-item {
-        height: 72px;
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         border-radius: 8px;
         border: 3px solid $border-color;
-        padding: 10 0 10 16px;
+        padding: 10px 16px;
         position: relative;
         margin-bottom: 10px;
 
-        h3 {
+        h3,
+        p {
             margin: 0;
-            font-size: 22px;
             font-weight: 500;
             width: 80%;
         }
 
         p {
-            margin: 0;
             font-size: 14px;
             font-weight: 400;
-            width: 80%;
         }
 
         .close-button {
             position: absolute;
             right: 10px;
             top: 50%;
-            margin-right: 12px;
             transform: translateY(-50%);
-            height: 50%;
-            width: 5%;
             cursor: pointer;
             background-image: url("../images/delete-button.svg");
-            background-size: 50%;
+            background-size: contain;
             background-repeat: no-repeat;
+            width: 24px;
+            height: 24px;
+            border: none;
+            background-color: transparent;
+        }
+
+        .task-menu {
+            display: flex;
+            justify-content: flex-end;
+            gap: 5px;
+            margin-top: 10px;
+            padding-top: 5px;
+
+            button {
+                width: 30px;
+                height: 30px;
+                border-radius: 8px;
+                background-color: $border-color;
+                border: none;
+                color: #fff;
+                font-size: 16px;
+                cursor: pointer;
+            }
         }
     }
 }
 
 
-.delete-section {
+.background {
     display: none;
     position: fixed;
     z-index: 1;
@@ -165,24 +189,95 @@ ul {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+}
 
-    & .modal-content {
-        margin: 15% auto;
-        padding: 30px 20px;
+.modal-content {
+    margin: 15% auto;
+    padding: 30px 20px;
+    width: 30%;
+    height: 148px;
+    text-align: center;
+    border-top: 6px solid $border-color;
+
+    p {
+        font-weight: 400;
+        font-size: 18px;
+    }
+
+    button {
+        height: 24px;
         width: 30%;
-        height: 148px;
-        text-align: center;
-        border-top: 6px solid $border-color;
+    }
+}
 
-        p {
-            font-weight: 400;
-            font-size: 18px;
-        }
 
-        button {
-            height: 24px;
-            width: 30%;
-            height: 20%;
+.menu-section {
+    justify-content: center;
+    align-items: flex-end;
+
+    & .menu {
+        display: flex;
+        width: 80%;
+        height: 80px;
+        justify-content: space-around;
+        align-items: center;
+        border-radius: 8px;
+
+        li {
+            list-style: none;
         }
+    }
+}
+
+
+/* Меню кнопок (share, info, edit) */
+.task-menu {
+    display: flex;
+    flex-direction: row;
+    margin-top: 35px;
+}
+
+/* Стиль для каждой кнопки в меню */
+.task-menu button {
+    background-color: $blocks-hover-color;
+    border: 2px solid $border-color;
+    border-radius: 50%;
+    color: $border-color;
+    width: 30px;
+    height: 30px;
+    font-size: 14px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+/* Иконки можно добавить позже */
+.task-menu .share-button::before {
+    content: '⤴';
+    /* Иконка для Share */
+}
+
+.task-menu .info-button::before {
+    content: 'ℹ';
+    /* Иконка для Info */
+}
+
+.task-menu .edit-button::before {
+    content: '✏';
+    /* Иконка для Edit */
+}
+
+
+.edit-section {
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+    align-items: flex-end;
+
+    & .edit {
+        display: flex;
+        flex-direction: column;
+
+
+        & .buttons {}
     }
 }
