--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,12 +1,12 @@
 $background-color: #1B1A17;
-$blocks-hover-color: #1F1E1B;
+$blocks-hover-color: #242320;
 $border-color: #A35709;
 $border-hover: #FF8303;
 $text-color: #F0E3CA;
 
 @font-face {
     font-family: "Roboto";
-    src: url("../../fonts/Roboto.ttf");
+    src: url("../fonts/Roboto.ttf");
 }
 
 
@@ -40,12 +40,11 @@ h3 {
 }
 
 .base-form {
-    width: 95%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     padding: 23px 22px;
     height: 110px;
+    justify-content: center;
 
     & .input-section {
         display: flex;
@@ -65,8 +64,8 @@ h3 {
     }
 
     & .add-button {
-        width: 20%;
         margin-left: 10px;
+        width: 20%;
 
         & .add {
             margin: 23px;
@@ -116,8 +115,9 @@ h3 {
 
 
 .tasks-list {
+    display: flex;
     margin-top: 32px;
-    padding: 0 22px;
+    padding: 0;
     gap: 10px;
 
     & .task-item {
@@ -191,22 +191,24 @@ h3 {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modal-content {
+.delete-window {
     margin: 15% auto;
     padding: 30px 20px;
     width: 30%;
     height: 148px;
     text-align: center;
     border-top: 6px solid $border-color;
+    border-radius: 8px;
 
     p {
         font-weight: 400;
-        font-size: 18px;
+        font-size: 30px;
     }
 
     button {
-        height: 24px;
+        height: 30px;
         width: 30%;
+        font-size: 16px;
     }
 }
 
@@ -217,67 +219,180 @@ h3 {
 
     & .menu {
         display: flex;
+        position: fixed;
+        bottom: 0;
         width: 80%;
-        height: 80px;
+        height: 100px;
         justify-content: space-around;
         align-items: center;
-        border-radius: 8px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        list-style: none;
+        border: 1px solid $border-color;
 
         li {
-            list-style: none;
+            cursor: pointer;
         }
     }
 }
 
 
-/* Меню кнопок (share, info, edit) */
 .task-menu {
     display: flex;
+    justify-content: end;
+    margin-bottom: 30px;
+    margin-top: -5px;
+    gap: 10px;
     flex-direction: row;
-    margin-top: 35px;
+
+    button {
+        background-color: $blocks-hover-color;
+        border: 2px solid $border-color;
+        border-radius: 50%;
+        color: $border-color;
+        width: 40px;
+        height: 40px;
+        font-size: 14px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &.share-button {
+            background-image: url('../images/share-button.svg');
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        &.info-button {
+            background-image: url('../images/info-button.svg');
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        &.edit-button {
+            background-image: url('../images/edit-button.svg');
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+    }
 }
 
-/* Стиль для каждой кнопки в меню */
-.task-menu button {
-    background-color: $blocks-hover-color;
-    border: 2px solid $border-color;
-    border-radius: 50%;
-    color: $border-color;
-    width: 30px;
-    height: 30px;
-    font-size: 14px;
-    margin-left: 5px;
-    cursor: pointer;
-}
-
-/* Иконки можно добавить позже */
-.task-menu .share-button::before {
-    content: '⤴';
-    /* Иконка для Share */
-}
-
-.task-menu .info-button::before {
-    content: 'ℹ';
-    /* Иконка для Info */
-}
-
-.task-menu .edit-button::before {
-    content: '✏';
-    /* Иконка для Edit */
-}
 
 
 .edit-section {
-    width: 100%;
-    height: 50%;
-    justify-content: center;
-    align-items: flex-end;
-
-    & .edit {
+    .edit {
         display: flex;
+        position: fixed;
+        bottom: 0;
+        left: 5%;
+        right: 5%;
+        top: 50%;
         flex-direction: column;
+        align-items: center;
+        padding-top: 10px;
+        border-radius: 8px;
+        background-color: $background-color;
+
+        &.edit-elements {
+            display: flex;
+            width: 100%;
+            margin-bottom: 15px;
+            flex-direction: column;
 
 
-        & .buttons {}
+            &.edit-element {
+                width: 80%;
+                margin: 0 10px;
+                padding: 10px;
+                border-radius: 5px;
+                color: $text-color;
+                border: 1px solid $border-color;
+                background-color: $blocks-hover-color;
+            }
+        }
+
+        &.buttons {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+
+            button {
+                border-radius: 8px;
+                padding: 10px 15px;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+@media screen and (min-width: 300px) and (max-width: 480px) {
+    .base-form {
+        display: flex;
+        width: 80%;
+        height: 30%;
+        margin: 0;
+        border: 1px solid white;
+    }
+
+    ul {
+        border: 1px solid white;
+        margin: 5px auto;
+        width: 50%;
+        height: auto;
+
+        & .task-item {
+            height: 100px;
+
+            h3 {
+                font-size: 36px;
+            }
+
+            p {
+                font-size: 30px;
+            }
+        }
+    }
+
+
+}
+
+@media screen and (min-width: 2000px) and (max-width: 2600px) {
+    .base-form {
+        width: 50%;
+        height: 300px;
+        border: 1px solid green;
+        margin: 10px auto;
+        display: flex;
+    }
+
+    ul {
+        border: 1px solid white;
+        margin: 5px auto;
+        width: 50%;
+        height: auto;
+
+        & .task-item {
+            height: 100px;
+
+            h3 {
+                font-size: 36px;
+            }
+
+            p {
+                font-size: 30px;
+            }
+        }
+    }
+
+    .menu {
+        height: 300px;
     }
 }
