--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -1,31 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto.ttf");
-}
-* {
-  font-family: Roboto, sans-serif;
-  background-color: #1B1A17;
-}
-
-button {
-  color: #F0E3CA;
-  border-radius: 8px;
-  border: 2px solid #A35709;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #242320;
-  border-color: #FF8303;
-}
-
-p,
-h3 {
-  color: #F0E3CA;
-  justify-content: center;
-  align-items: center;
-}
-
 .main-section {
   padding: 20px 40px;
 }
@@ -34,14 +6,14 @@ h3 {
   display: flex;
   flex-direction: row;
   padding: 23px 22px;
-  height: 110px;
+  height: 150px;
   justify-content: center;
 }
 .base-form .input-section {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 80%;
+  width: 90%;
 }
 .base-form .input-element {
   height: 48px;
@@ -54,7 +26,7 @@ h3 {
 }
 .base-form .add-button {
   margin-left: 10px;
-  width: 20%;
+  width: 10%;
 }
 .base-form .add-button .add {
   margin: 23px;
@@ -249,87 +221,44 @@ h3 {
   bottom: 0;
   left: 5%;
   right: 5%;
-  top: 50%;
+  top: 30%;
   flex-direction: column;
   align-items: center;
   padding-top: 10px;
   border-radius: 8px;
   background-color: #1B1A17;
 }
-.edit-section .edit.edit-elements {
+.edit-section .edit .edit-elements {
   display: flex;
   width: 100%;
+  height: 80%;
   margin-bottom: 15px;
   flex-direction: column;
+  align-items: center;
 }
-.edit-section .edit.edit-elements.edit-element {
-  width: 80%;
-  margin: 0 10px;
+.edit-section .edit .edit-elements .edit-element {
+  width: 85%;
+  margin-bottom: 10px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 8px;
   color: #F0E3CA;
   border: 1px solid #A35709;
   background-color: #242320;
+  text-align: left;
 }
-.edit-section .edit.buttons {
+.edit-section .edit .edit-elements #title {
+  height: 20%;
+}
+.edit-section .edit .edit-elements #description {
+  height: 80%;
+}
+.edit-section .edit .buttons {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: space-around;
+  width: 30%;
+  margin: 0 auto;
 }
-.edit-section .edit.buttons button {
-  border-radius: 8px;
+.edit-section .edit .buttons button {
   padding: 10px 15px;
   cursor: pointer;
-}
-
-@media screen and (min-width: 300px) and (max-width: 480px) {
-  .base-form {
-    display: flex;
-    width: 80%;
-    height: 30%;
-    margin: 0;
-    border: 1px solid white;
-  }
-  ul {
-    border: 1px solid white;
-    margin: 5px auto;
-    width: 50%;
-    height: auto;
-  }
-  ul .task-item {
-    height: 100px;
-  }
-  ul .task-item h3 {
-    font-size: 36px;
-  }
-  ul .task-item p {
-    font-size: 30px;
-  }
-}
-@media screen and (min-width: 2000px) and (max-width: 2600px) {
-  .base-form {
-    width: 50%;
-    height: 300px;
-    border: 1px solid green;
-    margin: 10px auto;
-    display: flex;
-  }
-  ul {
-    border: 1px solid white;
-    margin: 5px auto;
-    width: 50%;
-    height: auto;
-  }
-  ul .task-item {
-    height: 100px;
-  }
-  ul .task-item h3 {
-    font-size: 36px;
-  }
-  ul .task-item p {
-    font-size: 30px;
-  }
-  .menu {
-    height: 300px;
-  }
 }/*# sourceMappingURL=general.css.map */
