--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -4,37 +4,6 @@ $border-color: #A35709;
 $border-hover: #FF8303;
 $text-color: #F0E3CA;
 
-@font-face {
-    font-family: "Roboto";
-    src: url("../fonts/Roboto.ttf");
-}
-
-
-* {
-    font-family: Roboto, sans-serif;
-    background-color: $background-color;
-}
-
-button {
-    color: $text-color;
-    border-radius: 8px;
-    border: 2px solid $border-color;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: $blocks-hover-color;
-    border-color: $border-hover;
-}
-
-p,
-h3 {
-    color: $text-color;
-    justify-content: center;
-    align-items: center;
-}
-
-
 .main-section {
     padding: 20px 40px;
 }
@@ -43,14 +12,14 @@ h3 {
     display: flex;
     flex-direction: row;
     padding: 23px 22px;
-    height: 110px;
+    height: 150px;
     justify-content: center;
 
     & .input-section {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 80%;
+        width: 90%;
     }
 
     & .input-element {
@@ -65,7 +34,7 @@ h3 {
 
     & .add-button {
         margin-left: 10px;
-        width: 20%;
+        width: 10%;
 
         & .add {
             margin: 23px;
@@ -287,112 +256,51 @@ h3 {
         bottom: 0;
         left: 5%;
         right: 5%;
-        top: 50%;
+        top: 30%;
         flex-direction: column;
         align-items: center;
         padding-top: 10px;
         border-radius: 8px;
         background-color: $background-color;
 
-        &.edit-elements {
+        & .edit-elements {
             display: flex;
             width: 100%;
+            height: 80%;
             margin-bottom: 15px;
             flex-direction: column;
+            align-items: center;
 
-
-            &.edit-element {
-                width: 80%;
-                margin: 0 10px;
+            & .edit-element {
+                width: 85%;
+                margin-bottom: 10px;
                 padding: 10px;
-                border-radius: 5px;
+                border-radius: 8px;
                 color: $text-color;
                 border: 1px solid $border-color;
                 background-color: $blocks-hover-color;
+                text-align: left;
+            }
+
+            & #title {
+                height: 20%;
+            }
+
+            & #description {
+                height: 80%;
             }
         }
 
-        &.buttons {
+        & .buttons {
             display: flex;
-            justify-content: space-between;
-            width: 100%;
+            justify-content: space-around;
+            width: 30%;
+            margin: 0 auto;
 
             button {
-                border-radius: 8px;
                 padding: 10px 15px;
                 cursor: pointer;
             }
         }
-    }
-}
-
-
-
-
-
-
-
-
-@media screen and (min-width: 300px) and (max-width: 480px) {
-    .base-form {
-        display: flex;
-        width: 80%;
-        height: 30%;
-        margin: 0;
-        border: 1px solid white;
-    }
-
-    ul {
-        border: 1px solid white;
-        margin: 5px auto;
-        width: 50%;
-        height: auto;
-
-        & .task-item {
-            height: 100px;
-
-            h3 {
-                font-size: 36px;
-            }
-
-            p {
-                font-size: 30px;
-            }
-        }
-    }
-
-
-}
-
-@media screen and (min-width: 2000px) and (max-width: 2600px) {
-    .base-form {
-        width: 50%;
-        height: 300px;
-        border: 1px solid green;
-        margin: 10px auto;
-        display: flex;
-    }
-
-    ul {
-        border: 1px solid white;
-        margin: 5px auto;
-        width: 50%;
-        height: auto;
-
-        & .task-item {
-            height: 100px;
-
-            h3 {
-                font-size: 36px;
-            }
-
-            p {
-                font-size: 30px;
-            }
-        }
-    }
-
-    .menu {
-        height: 300px;
     }
 }
