--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -45,15 +45,7 @@
   align-items: center;
   padding: 12px 0px;
 }
-.no-tasks ::before {
-  content: "";
-  display: block;
-  width: 100px;
-  height: 1px;
-  background-color: #A35709;
-  border: 3px solid #A35709;
-  border-radius: 8px;
-}
+.no-tasks ::before,
 .no-tasks ::after {
   content: "";
   display: block;
@@ -70,17 +62,19 @@
 
 .tasks-list {
   display: flex;
+  flex-direction: column;
   margin-top: 32px;
-  padding: 0;
+  padding: 0px 20px;
   gap: 10px;
 }
 .tasks-list .task-item {
   width: 100%;
-  display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: space-between;
   border-radius: 8px;
   border: 3px solid #A35709;
+  background-color: #242320;
   padding: 10px 16px;
   position: relative;
   margin-bottom: 10px;
@@ -90,41 +84,56 @@
   margin: 0;
   font-weight: 500;
   width: 80%;
+  background-color: #242320;
 }
 .tasks-list .task-item p {
   font-size: 14px;
   font-weight: 400;
 }
-.tasks-list .task-item .close-button {
+.tasks-list .task-item .delete-button {
   position: absolute;
-  right: 10px;
+  right: 30px;
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
   background-image: url("../images/delete-button.svg");
-  background-size: contain;
+  background-size: 40%;
   background-repeat: no-repeat;
-  width: 24px;
-  height: 24px;
-  border: none;
-  background-color: transparent;
+  background-position: center;
+  width: 3%;
+  height: 50%;
 }
-.tasks-list .task-item .task-menu {
+.tasks-list .task-item.expanded {
+  margin-bottom: 60px;
+}
+
+.task-menu {
   display: flex;
+  position: absolute;
+  top: 100%;
+  right: 0;
   justify-content: flex-end;
   gap: 5px;
   margin-top: 10px;
   padding-top: 5px;
 }
-.tasks-list .task-item .task-menu button {
-  width: 30px;
-  height: 30px;
+.task-menu button {
+  width: 35px;
+  height: 35px;
   border-radius: 8px;
-  background-color: #A35709;
-  border: none;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
+  font-size: 10px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #242320;
+}
+.task-menu button.share-button {
+  background-image: url("../images/share-button.svg");
+}
+.task-menu button.info-button {
+  background-image: url("../images/info-button.svg");
+}
+.task-menu button.edit-button {
+  background-image: url("../images/edit-button.svg");
 }
 
 .background {
@@ -140,9 +149,9 @@
 
 .delete-window {
   margin: 15% auto;
-  padding: 30px 20px;
+  padding: 20px;
   width: 30%;
-  height: 148px;
+  height: 180px;
   text-align: center;
   border-top: 6px solid #A35709;
   border-radius: 8px;
@@ -157,11 +166,11 @@
   font-size: 16px;
 }
 
-.menu-section {
+.share-section {
   justify-content: center;
   align-items: flex-end;
 }
-.menu-section .menu {
+.share-section .menu {
   display: flex;
   position: fixed;
   bottom: 0;
@@ -174,45 +183,8 @@
   list-style: none;
   border: 1px solid #A35709;
 }
-.menu-section .menu li {
+.share-section .menu li {
   cursor: pointer;
-}
-
-.task-menu {
-  display: flex;
-  justify-content: end;
-  margin-bottom: 30px;
-  margin-top: -5px;
-  gap: 10px;
-  flex-direction: row;
-}
-.task-menu button {
-  background-color: #242320;
-  border: 2px solid #A35709;
-  border-radius: 50%;
-  color: #A35709;
-  width: 40px;
-  height: 40px;
-  font-size: 14px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.task-menu button.share-button {
-  background-image: url("../images/share-button.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-.task-menu button.info-button {
-  background-image: url("../images/info-button.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-.task-menu button.edit-button {
-  background-image: url("../images/edit-button.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 
 .edit-section .edit {
@@ -232,6 +204,7 @@
   display: flex;
   width: 100%;
   height: 80%;
+  margin-top: 10px;
   margin-bottom: 15px;
   flex-direction: column;
   align-items: center;
@@ -261,4 +234,4 @@
 .edit-section .edit .buttons button {
   padding: 10px 15px;
   cursor: pointer;
-}/*# sourceMappingURL=general.css.map */
+}/*# sourceMappingURL=sections.css.map */
