--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -56,16 +56,7 @@ $text-color: #F0E3CA;
     align-items: center;
     padding: 12px 0px;
 
-    ::before {
-        content: "";
-        display: block;
-        width: 100px;
-        height: 1px;
-        background-color: $border-color;
-        border: 3px solid $border-color;
-        border-radius: 8px;
-    }
-
+    ::before,
     ::after {
         content: "";
         display: block;
@@ -85,17 +76,19 @@ $text-color: #F0E3CA;
 
 .tasks-list {
     display: flex;
+    flex-direction: column;
     margin-top: 32px;
-    padding: 0;
+    padding: 0px 20px;
     gap: 10px;
 
     & .task-item {
         width: 100%;
-        display: flex;
+        position: relative;
         flex-direction: column;
         justify-content: space-between;
         border-radius: 8px;
         border: 3px solid $border-color;
+        background-color: $blocks-hover-color;
         padding: 10px 16px;
         position: relative;
         margin-bottom: 10px;
@@ -105,6 +98,7 @@ $text-color: #F0E3CA;
             margin: 0;
             font-weight: 500;
             width: 80%;
+            background-color: $blocks-hover-color;
         }
 
         p {
@@ -112,38 +106,55 @@ $text-color: #F0E3CA;
             font-weight: 400;
         }
 
-        .close-button {
+        & .delete-button {
             position: absolute;
-            right: 10px;
+            right: 30px;
             top: 50%;
             transform: translateY(-50%);
             cursor: pointer;
             background-image: url("../images/delete-button.svg");
-            background-size: contain;
+            background-size: 40%;
             background-repeat: no-repeat;
-            width: 24px;
-            height: 24px;
-            border: none;
-            background-color: transparent;
+            background-position: center;
+            width: 3%;
+            height: 50%;
         }
 
-        .task-menu {
-            display: flex;
-            justify-content: flex-end;
-            gap: 5px;
-            margin-top: 10px;
-            padding-top: 5px;
+        &.expanded {
+            margin-bottom: 60px;
+        }
+    }
+}
 
-            button {
-                width: 30px;
-                height: 30px;
-                border-radius: 8px;
-                background-color: $border-color;
-                border: none;
-                color: #fff;
-                font-size: 16px;
-                cursor: pointer;
-            }
+.task-menu {
+    display: flex;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    justify-content: flex-end;
+    gap: 5px;
+    margin-top: 10px;
+    padding-top: 5px;
+
+    button {
+        width: 35px;
+        height: 35px;
+        border-radius: 8px;
+        font-size: 10px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: $blocks-hover-color;
+
+        &.share-button {
+            background-image: url('../images/share-button.svg');
+        }
+
+        &.info-button {
+            background-image: url('../images/info-button.svg');
+        }
+
+        &.edit-button {
+            background-image: url('../images/edit-button.svg');
         }
     }
 }
@@ -162,9 +173,9 @@ $text-color: #F0E3CA;
 
 .delete-window {
     margin: 15% auto;
-    padding: 30px 20px;
+    padding: 20px;
     width: 30%;
-    height: 148px;
+    height: 180px;
     text-align: center;
     border-top: 6px solid $border-color;
     border-radius: 8px;
@@ -182,7 +193,7 @@ $text-color: #F0E3CA;
 }
 
 
-.menu-section {
+.share-section {
     justify-content: center;
     align-items: flex-end;
 
@@ -206,49 +217,6 @@ $text-color: #F0E3CA;
 }
 
 
-.task-menu {
-    display: flex;
-    justify-content: end;
-    margin-bottom: 30px;
-    margin-top: -5px;
-    gap: 10px;
-    flex-direction: row;
-
-    button {
-        background-color: $blocks-hover-color;
-        border: 2px solid $border-color;
-        border-radius: 50%;
-        color: $border-color;
-        width: 40px;
-        height: 40px;
-        font-size: 14px;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        &.share-button {
-            background-image: url('../images/share-button.svg');
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-
-        &.info-button {
-            background-image: url('../images/info-button.svg');
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-
-        &.edit-button {
-            background-image: url('../images/edit-button.svg');
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-    }
-}
-
-
-
 .edit-section {
     .edit {
         display: flex;
@@ -267,6 +235,7 @@ $text-color: #F0E3CA;
             display: flex;
             width: 100%;
             height: 80%;
+            margin-top: 10px;
             margin-bottom: 15px;
             flex-direction: column;
             align-items: center;
