--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -15,10 +15,11 @@
   justify-content: space-between;
   width: 90%;
 }
-.base-form .input-element {
+.base-form .input-section .input-element {
   height: 48px;
   background-color: #242320;
   border: 1px solid #A35709;
+  color: #F0E3CA;
   border-radius: 8px;
   width: 100%;
   font-weight: 400;
@@ -27,11 +28,9 @@
 .base-form .add-button {
   margin-left: 10px;
   width: 10%;
-}
-.base-form .add-button .add {
-  margin: 23px;
-  justify-content: center;
-  align-items: center;
+  background-image: url("../images/add-button.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .no-tasks {
@@ -73,7 +72,7 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 8px;
-  border: 3px solid #A35709;
+  border: 2px solid #A35709;
   background-color: #242320;
   padding: 10px 16px;
   position: relative;
@@ -168,16 +167,16 @@
 
 .share-section {
   justify-content: center;
-  align-items: flex-end;
 }
 .share-section .menu {
   display: flex;
   position: fixed;
   bottom: 0;
-  width: 80%;
+  width: 90%;
   height: 100px;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 30px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   list-style: none;
@@ -204,13 +203,12 @@
   display: flex;
   width: 100%;
   height: 80%;
-  margin-top: 10px;
-  margin-bottom: 15px;
+  margin-top: 10px auto;
   flex-direction: column;
   align-items: center;
 }
-.edit-section .edit .edit-elements .edit-element {
-  width: 85%;
+.edit-section .edit .edit-elements .title-element {
+  width: 90%;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 8px;
@@ -219,11 +217,17 @@
   background-color: #242320;
   text-align: left;
 }
-.edit-section .edit .edit-elements #title {
-  height: 20%;
-}
-.edit-section .edit .edit-elements #description {
+.edit-section .edit .edit-elements .description-element {
+  width: 90%;
   height: 80%;
+  padding: 10px;
+  border-radius: 8px;
+  color: #F0E3CA;
+  border: 1px solid #A35709;
+  background-color: #242320;
+  text-align: left;
+  resize: none;
+  overflow-wrap: break-word;
 }
 .edit-section .edit .buttons {
   display: flex;
