--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -1,5 +1,5 @@
 $background-color: #1B1A17;
-$blocks-hover-color: #242320;
+$elements-color: #242320;
 $border-color: #A35709;
 $border-hover: #FF8303;
 $text-color: #F0E3CA;
@@ -20,27 +20,25 @@ $text-color: #F0E3CA;
         flex-direction: column;
         justify-content: space-between;
         width: 90%;
-    }
 
-    & .input-element {
-        height: 48px;
-        background-color: $blocks-hover-color;
-        border: 1px solid $border-color;
-        border-radius: 8px;
-        width: 100%;
-        font-weight: 400;
-        font-size: 14px;
+        & .input-element {
+            height: 48px;
+            background-color: $elements-color;
+            border: 1px solid $border-color;
+            color: $text-color;
+            border-radius: 8px;
+            width: 100%;
+            font-weight: 400;
+            font-size: 14px;
+        }
     }
 
     & .add-button {
         margin-left: 10px;
         width: 10%;
-
-        & .add {
-            margin: 23px;
-            justify-content: center;
-            align-items: center;
-        }
+        background-image: url('../images/add-button.svg');
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
 }
@@ -87,8 +85,8 @@ $text-color: #F0E3CA;
         flex-direction: column;
         justify-content: space-between;
         border-radius: 8px;
-        border: 3px solid $border-color;
-        background-color: $blocks-hover-color;
+        border: 2px solid $border-color;
+        background-color: $elements-color;
         padding: 10px 16px;
         position: relative;
         margin-bottom: 10px;
@@ -98,7 +96,7 @@ $text-color: #F0E3CA;
             margin: 0;
             font-weight: 500;
             width: 80%;
-            background-color: $blocks-hover-color;
+            background-color: $elements-color;
         }
 
         p {
@@ -143,7 +141,7 @@ $text-color: #F0E3CA;
         font-size: 10px;
         background-repeat: no-repeat;
         background-position: center;
-        background-color: $blocks-hover-color;
+        background-color: $elements-color;
 
         &.share-button {
             background-image: url('../images/share-button.svg');
@@ -195,16 +193,16 @@ $text-color: #F0E3CA;
 
 .share-section {
     justify-content: center;
-    align-items: flex-end;
 
     & .menu {
         display: flex;
         position: fixed;
         bottom: 0;
-        width: 80%;
+        width: 90%;
         height: 100px;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
+        padding: 0 30px;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         list-style: none;
@@ -235,28 +233,32 @@ $text-color: #F0E3CA;
             display: flex;
             width: 100%;
             height: 80%;
-            margin-top: 10px;
-            margin-bottom: 15px;
+            margin-top: 10px auto;
             flex-direction: column;
             align-items: center;
 
-            & .edit-element {
-                width: 85%;
+            & .title-element {
+                width: 90%;
                 margin-bottom: 10px;
                 padding: 10px;
                 border-radius: 8px;
                 color: $text-color;
                 border: 1px solid $border-color;
-                background-color: $blocks-hover-color;
+                background-color: $elements-color;
                 text-align: left;
             }
 
-            & #title {
-                height: 20%;
-            }
-
-            & #description {
+            & .description-element {
+                width: 90%;
                 height: 80%;
+                padding: 10px;
+                border-radius: 8px;
+                color: $text-color;
+                border: 1px solid $border-color;
+                background-color: $elements-color;
+                text-align: left;
+                resize: none;
+                overflow-wrap: break-word;
             }
         }
 
