--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -12,6 +12,7 @@ button {
   color: #F0E3CA;
   border-radius: 8px;
   border: 2px solid #A35709;
+  background-color: #1B1A17;
   cursor: pointer;
 }
 
@@ -23,50 +24,62 @@ button:hover {
 p,
 h3 {
   color: #F0E3CA;
-  justify-content: center;
-  align-items: center;
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
+  h3,
+  p {
+    font-size: 20px;
+  }
+  .main-section {
+    padding: 0px;
+  }
   .base-form {
     display: flex;
-    width: 80%;
-    height: 30%;
+    width: 100%;
     margin: 0;
-    border: 1px solid white;
   }
-  ul {
-    border: 1px solid white;
-    margin: 5px auto;
-    width: 50%;
-    height: auto;
-  }
-  ul .task-item {
+  .base-form .input-section {
     height: 100px;
+    width: 75%;
   }
-  ul .task-item h3 {
-    font-size: 36px;
+  .base-form .add-button {
+    width: 25%;
   }
-  ul .task-item p {
-    font-size: 30px;
+  .delete-window {
+    width: 50%;
+    padding: 0px;
+  }
+  .tasks-list .task-item .delete-button {
+    right: 15px;
+    width: 10%;
+  }
+  .edit-section .edit .buttons {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 1200px) {
+  .window-delete {
+    width: 50%;
+    padding: 0px;
   }
 }
 @media screen and (min-width: 2000px) and (max-width: 2600px) {
   .base-form {
     width: 50%;
-    height: 300px;
-    border: 1px solid green;
     margin: 10px auto;
     display: flex;
   }
-  .base-form .input-section {
-    width: 80%;
+  .base-form .input-element {
+    height: 55px;
   }
-  .base-form .add-button {
-    width: 20%;
+  h3 {
+    font-size: 36px;
+  }
+  p {
+    font-size: 30px;
   }
   ul {
-    border: 1px solid white;
     margin: 5px auto;
     width: 50%;
     height: auto;
@@ -74,13 +87,7 @@ h3 {
   ul .task-item {
     height: 100px;
   }
-  ul .task-item h3 {
-    font-size: 36px;
-  }
-  ul .task-item p {
-    font-size: 30px;
-  }
   .menu {
-    height: 300px;
+    height: 400px;
   }
 }/*# sourceMappingURL=common.css.map */
