--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -4,6 +4,16 @@ $border-color: #A35709;
 $border-hover: #FF8303;
 $text-color: #F0E3CA;
 
+@mixin buttons-images {
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+@mixin colors {
+    background-color: $elements-color;
+    border: 1px solid $border-color;
+}
+
 .main-section {
     padding: 20px 40px;
 }
@@ -15,30 +25,27 @@ $text-color: #F0E3CA;
     height: 150px;
     justify-content: center;
 
-    & .input-section {
+    .input-section {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         width: 90%;
 
         & .input-element {
+            @include colors;
             height: 48px;
-            background-color: $elements-color;
-            border: 1px solid $border-color;
             color: $text-color;
-            border-radius: 8px;
             width: 100%;
-            font-weight: 400;
             font-size: 14px;
+            border-radius: 8px;
         }
     }
 
-    & .add-button {
+    .add-button {
         margin-left: 10px;
         width: 10%;
         background-image: url('../images/add-button.svg');
-        background-position: center;
-        background-repeat: no-repeat;
+        @include buttons-images
     }
 
 }
@@ -60,13 +67,11 @@ $text-color: #F0E3CA;
         display: block;
         width: 100px;
         height: 1px;
-        background-color: $border-color;
+        background-color: $elements-color;
         border: 3px solid $border-color;
-        border-radius: 8px;
     }
 
     p {
-        font-weight: 400;
         font-size: 24px;
     }
 }
@@ -80,40 +85,36 @@ $text-color: #F0E3CA;
     gap: 10px;
 
     & .task-item {
+        @include colors;
         width: 100%;
         position: relative;
         flex-direction: column;
         justify-content: space-between;
-        border-radius: 8px;
-        border: 2px solid $border-color;
-        background-color: $elements-color;
         padding: 10px 16px;
         position: relative;
         margin-bottom: 10px;
+        border-radius: 8px;
 
         h3,
         p {
             margin: 0;
-            font-weight: 500;
             width: 80%;
             background-color: $elements-color;
         }
 
         p {
+            margin-top: 8px;
             font-size: 14px;
-            font-weight: 400;
         }
 
-        & .delete-button {
+        .delete-button {
             position: absolute;
             right: 30px;
             top: 50%;
             transform: translateY(-50%);
-            cursor: pointer;
             background-image: url("../images/delete-button.svg");
             background-size: 40%;
-            background-repeat: no-repeat;
-            background-position: center;
+            @include buttons-images;
             width: 3%;
             height: 50%;
         }
@@ -137,10 +138,8 @@ $text-color: #F0E3CA;
     button {
         width: 35px;
         height: 35px;
-        border-radius: 8px;
         font-size: 10px;
-        background-repeat: no-repeat;
-        background-position: center;
+        @include buttons-images;
         background-color: $elements-color;
 
         &.share-button {
@@ -176,14 +175,13 @@ $text-color: #F0E3CA;
     height: 180px;
     text-align: center;
     border-top: 6px solid $border-color;
-    border-radius: 8px;
 
     p {
-        font-weight: 400;
         font-size: 30px;
     }
 
     button {
+        margin-right: 10px;
         height: 30px;
         width: 30%;
         font-size: 16px;
@@ -194,7 +192,7 @@ $text-color: #F0E3CA;
 .share-section {
     justify-content: center;
 
-    & .menu {
+    .menu {
         display: flex;
         position: fixed;
         bottom: 0;
@@ -226,10 +224,9 @@ $text-color: #F0E3CA;
         flex-direction: column;
         align-items: center;
         padding-top: 10px;
-        border-radius: 8px;
         background-color: $background-color;
 
-        & .edit-elements {
+        .edit-elements {
             display: flex;
             width: 100%;
             height: 80%;
@@ -237,40 +234,38 @@ $text-color: #F0E3CA;
             flex-direction: column;
             align-items: center;
 
-            & .title-element {
+            .edit-element {
                 width: 90%;
-                margin-bottom: 10px;
                 padding: 10px;
-                border-radius: 8px;
                 color: $text-color;
-                border: 1px solid $border-color;
-                background-color: $elements-color;
+                @include colors;
                 text-align: left;
+                border-radius: 8px;
+                vertical-align: top;
+                box-sizing: border-box;
             }
 
-            & .description-element {
-                width: 90%;
+            .title-element {
+                height: 20%;
+                margin-bottom: 10px;
+            }
+
+            .description-element {
                 height: 80%;
-                padding: 10px;
-                border-radius: 8px;
-                color: $text-color;
-                border: 1px solid $border-color;
-                background-color: $elements-color;
-                text-align: left;
                 resize: none;
-                overflow-wrap: break-word;
+                padding: 10px;
+                box-sizing: border-box;
             }
         }
 
-        & .buttons {
+        .buttons {
             display: flex;
             justify-content: space-around;
             width: 30%;
-            margin: 0 auto;
+            margin: 10px auto;
 
             button {
                 padding: 10px 15px;
-                cursor: pointer;
             }
         }
     }
