add media queries for tablets & big screens

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -4,6 +4,7 @@
 }
 * {
   font-family: Roboto, sans-serif;
+  font-weight: 400;
   background-color: #1B1A17;
   box-sizing: border-box;
 }
@@ -35,7 +36,6 @@ h3 {
     padding: 0px;
   }
   .base-form {
-    display: flex;
     width: 100%;
     margin: 0;
   }
@@ -47,8 +47,8 @@ h3 {
     width: 25%;
   }
   .delete-window {
-    width: 50%;
-    padding: 0px;
+    width: 60%;
+    padding: 10px;
   }
   .tasks-list .task-item .delete-button {
     right: 15px;
@@ -58,20 +58,24 @@ h3 {
     width: 70%;
   }
 }
-@media screen and (min-width: 481px) and (max-width: 1200px) {
-  .window-delete {
+@media screen and (min-width: 481px) and (max-width: 1000px) {
+  .delete-window {
     width: 50%;
-    padding: 0px;
+  }
+  .tasks-list .task-item .delete-button {
+    right: 15px;
+    width: 5%;
   }
 }
 @media screen and (min-width: 2000px) and (max-width: 2600px) {
   .base-form {
-    width: 50%;
+    width: 80%;
     margin: 10px auto;
     display: flex;
+    height: 250px;
   }
-  .base-form .input-element {
-    height: 55px;
+  .base-form .input-section .input-element {
+    height: 45%;
   }
   h3 {
     font-size: 36px;
@@ -81,13 +85,37 @@ h3 {
   }
   ul {
     margin: 5px auto;
-    width: 50%;
+    width: 80%;
     height: auto;
   }
   ul .task-item {
     height: 100px;
   }
-  .menu {
-    height: 400px;
+  .task-menu button {
+    width: 50px;
+    height: 50px;
+  }
+  .share-section .menu {
+    height: 150px;
+    width: 50%;
+  }
+  .delete-window {
+    height: 250px;
+    width: 25%;
+  }
+  .delete-window p {
+    font-size: 40px;
+  }
+  .delete-window button {
+    height: 40px;
+    width: 20%;
+  }
+  .edit-section .edit {
+    top: 50%;
+    right: 15%;
+    left: 15%;
+  }
+  .edit-section .edit .edit-elements {
+    height: 90%;
   }
 }/*# sourceMappingURL=common.css.map */
