--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto.ttf");
+  src: url("../assets/fonts/Roboto.ttf");
 }
 * {
   font-family: Roboto, sans-serif;
