--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -6,7 +6,7 @@ $text-color: #F0E3CA;
 
 @font-face {
     font-family: "Roboto";
-    src: url("../fonts/Roboto.ttf");
+    src: url("../assets/fonts/Roboto.ttf");
 }
 
 
