--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -44,7 +44,7 @@ $text-color: #F0E3CA;
     .add-button {
         margin-left: 10px;
         width: 10%;
-        background-image: url('../images/add-button.svg');
+        background-image: url('../assets/images/add-button.svg');
         @include buttons-images
     }
 
@@ -112,7 +112,7 @@ $text-color: #F0E3CA;
             right: 30px;
             top: 50%;
             transform: translateY(-50%);
-            background-image: url("../images/delete-button.svg");
+            background-image: url("../assets/images/delete-button.svg");
             background-size: 40%;
             @include buttons-images;
             width: 3%;
@@ -143,15 +143,15 @@ $text-color: #F0E3CA;
         background-color: $elements-color;
 
         &.share-button {
-            background-image: url('../images/share-button.svg');
+            background-image: url('../assets/images/share-button.svg');
         }
 
         &.info-button {
-            background-image: url('../images/info-button.svg');
+            background-image: url('../assets/images/info-button.svg');
         }
 
         &.edit-button {
-            background-image: url('../images/edit-button.svg');
+            background-image: url('../assets/images/edit-button.svg');
         }
     }
 }
